// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleLikeButton User off matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-4"
    data-testid="halb"
    id="halb"
  >
    <button
      aria-controls="radix-:r1:"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="flex items-center gap-2"
      data-state="closed"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-heart-icon lucide-heart size-6 stroke-blog-foreground-readable fill-transparent"
        data-testid="halb-icon"
        fill="none"
        height="24"
        id="halb-icon"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
        />
      </svg>
      <p>
        1 like
      </p>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ArticleLikeButton User on matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-4"
    data-testid="halb-user"
    id="halb-user"
  >
    <button
      aria-label="Curtir artigo"
      aria-pressed="false"
      class="flex items-center gap-2"
      data-testid="halb-button"
      id="halb-button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-heart-icon lucide-heart size-6 text-transparent stroke-blog-foreground-readable fill-transparent"
        data-testid="halb-icon-active"
        fill="none"
        height="24"
        id="halb-icon-active"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
        />
      </svg>
      <p>
        1 like
      </p>
    </button>
  </div>
</DocumentFragment>
`;
